fix: inset sidebar collapse button

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -123,6 +123,7 @@
   position: relative;
   width: 36px;
   height: 36px;
+  margin-right: 8px;
   flex: 0 0 auto;
   border: 0;
   outline: none;
